On the Upgrade Scripts page for upgrading across multiple domains at once, only show those actually used in the menu.
Renamed the phpSurveyor installer to Limesurvey, and updated the version 1.52.
Added a script installer for WordPress MU version 1.2.4. This is the multi-user version of the popular WordPress blogging engine.
Added a field to the Update Virtual Servers page to change the virus scanner (clmscan or clamdscan) on multiple domains at once.
Better handle additional databases in domains that start with a number, by converting the first digit to a word.
Added a Module Config option to control use of the batch domain creation form by domain owners.
Fixed bugs on the batch creation form that allowed domain owners to add new top-level servers, or sub-servers under domains that they don't own!
Added links from the CPU load, memory used, disk used and other information on the right-hand system information page to graphs showing their values over time. This is taken from data collected by Virtualmin starting with the installation of this new release.
In the Quota commands section of the Module Config page, added two new commands to get the quotas for a single user and group respectively. If defined, Virtualmin will use these when listing users in a domain or editing a single user, on the assumption that they are faster than the command which outputs quotas for all users.
Creation of domains that match certain regular expressions can be denied using a new Module Config option in the Defaults for new domains section.
Added the --only-features parameter to restore-domain.pl, which tells Virtualmin to only enable features selected for restore when creating a new domain as part of the process.
Added a similar option to the restore form in the Virtualmin web interface.
Usage for previous months can be shown on the Bandwidth Monitoring page, using a month selector menu at the bottom of the table of domains or dates.