@@ -151,3 +151,5 @@ delete_virts=0
 show_pass=1
 batch_create=1
 ldap_mail=0
+init_template=0
+initsub_template=1
