@@ -1,0 +1,10 @@
+<header>Initially selected template for sub-servers?</header>
+
+When this is set to <b>Yes</b>, the template menu when creating a new
+virtual sub-server will have this template selected by default. It will also be used
+when creating a server from the command line if no template is explictly
+specified with the <tt>--template</tt> parameter. Only one template can
+have this set to <b>Yes</b> at a time. <p>
+
+<footer>
+
