@@ -2076,6 +2076,8 @@ tmpl_title3=Clone Server Template
 tmpl_title4=Copy Default Server Template
 tmpl_default=From default settings
 tmpl_header=Virtual server template details
+tmpl_init=Initially selected template for top-level servers?
+tmpl_initsub=Initially selected template for sub-servers?
 tmpl_name=Template name
 tmpl_skel=Skeleton directory for files
 tmpl_skel_subs=Substitute variables in contents?
